--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- my profile photo-->
     <h2>My Profile</h2>
 
-    <img src="pp.jpg" alt="I am Bijoy">
+    <img src="pp.jpg" alt="I am Bijoy" style="width: 100px;">
 
     <h2>Objective</h2>
 
