--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
     <!-- my profile photo-->
-    <h2>My Profile</h2>
+    <h2 style="text-decoration: underline;">My Profile</h2>
 
     <img src="pp.jpg" alt="I am Bijoy" style="width: 100px;">
 
-    <h2>Objective</h2>
+    <h2 style="text-decoration: underline;">Objective</h2>
 
         <p>Enthusiastic and detail-oriented final-year BBA IT student with a solid foundation in information technology and 
         management principles. Eager to apply academic knowledge and technical skills in a dynamic and innovative 
@@ -25,32 +25,36 @@
         work collaboratively in team settings. Seeking an entry-level IT or management role to contribute to the development 
         and implementation of strategic technology solutions that drive business success.
         </p>
+
+    <hr>
         
-    <h2>Education</h2>
+    <h2 style="text-decoration: underline;">Education</h2>
 
         <ul>
-            <h3>Higher Secondary Education</h3>
+            <h3 style="text-decoration: underline;">Higher Secondary Education</h3>
                 <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 5000752022</li>
 
-            <h3>Secondary Education</h3>
+            <h3 style="text-decoration: underline;">Secondary Education</h3>
                 <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 5000752020</li>
 
-            <h3>Bachelor’s Degree</h3>
+            <h3 style="text-decoration: underline;">Bachelor’s Degree</h3>
                 <li>St. Josephs Degree & PG College, King Koti,
                 Abids, Hyderabad, Telangana, 500001, 2025</li>
         </ul>
 
-    <h2>Work Experience</h2>
+    <hr>
+
+    <h2 style="text-decoration: underline;">Experience</h2>
 
         <ul>
             <li>Business Analyst Intern - 
             Fundsroom
-            Aug’22 - Sep’21, 2023</li>
+            Aug’22, 2023 - Sep’21, 2023</li>
         </ul>
 
-    
+    <hr>
 
-    <h2>Skills</h2>
+    <h2 style="text-decoration: underline;">Skills</h2>
 
     <ul>
         <li>Power BI</li>
@@ -61,17 +65,19 @@
         <li>Interpersonal skills</li>
     </ul>
 
-    <h2>Certifications</h2>
+    <hr>
+
+    <h2 style="text-decoration: underline;">Certifications</h2>
 
     <ul>
         <li>Data Analysis with Business Decision Making - INSTITUTION'S INNOVATION COUNCIL
-            Sep'12 – Oct'12, 2022</li>
+            Sep'12,2022 – Oct'12, 2022</li>
             <li>Importance of Interpersonal Skills - 
             The Open University
             Mar’2, 2024</li>
             <li>Advanced Excel -
             Excelytics
-            Sep’19 - Oct’18, 2023
+            Sep’19, 2023 - Oct’18, 2023
         </li>
     </ul>
 
