--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
 
     <h2 style="text-decoration: underline;">Objective</h2>
 
-        <p>Enthusiastic and detail-oriented final-year BBA IT student with a solid foundation in information technology and 
-        management principles. Eager to apply academic knowledge and technical skills in a dynamic and innovative 
-        environment at JP Morgan Financial Services. Demonstrated ability to learn quickly, adapt to new challenges, and 
-        work collaboratively in team settings. Seeking an entry-level IT or management role to contribute to the development 
-        and implementation of strategic technology solutions that drive business success.
+        <p>
+        Highly motivated and adaptable BBA IT graduate with strong analytical and technical skills, seeking to leverage academic knowledge and internship experience in a dynamic role within IT or management. Eager to apply expertise in technology, project management, and problem-solving to contribute effectively to business operations and drive organizational success. Possesses a proactive attitude, strong work ethic, and a continuous learning mindset, with a proven track record of achieving goals through dedication and teamwork.
         </p>
 
     <hr>
