--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
     <h2 style="text-decoration: underline;">Education</h2>
 
         <ul>
-            <h3 style="text-decoration: underline;">Higher Secondary Education</h3>
-                <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 5000752022</li>
-
-            <h3 style="text-decoration: underline;">Secondary Education</h3>
-                <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 5000752020</li>
-
             <h3 style="text-decoration: underline;">Bachelor’s Degree</h3>
                 <li>St. Josephs Degree & PG College, King Koti,
                 Abids, Hyderabad, Telangana, 500001, 2025</li>
+            
+            <h3 style="text-decoration: underline;">Higher Secondary Education</h3>
+                <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 500075, 2022</li>
+
+            <h3 style="text-decoration: underline;">Secondary Education</h3>
+                <li>Shree Swaminarayan Gurukul International School, Hyderabad, Telangana, 500075, 2020</li>
+
         </ul>
 
     <hr>
@@ -48,19 +49,6 @@
             Fundsroom
             Aug’22, 2023 - Sep’21, 2023</li>
         </ul>
-
-    <hr>
-
-    <h2 style="text-decoration: underline;">Skills</h2>
-
-    <ul>
-        <li>Power BI</li>
-        <li>Microsoft Office</li>
-        <li>Typing skill
-        <li>Leadership skills</li>
-        <li>Team Management</li>
-        <li>Interpersonal skills</li>
-    </ul>
 
     <hr>
 
@@ -76,6 +64,19 @@
             Excelytics
             Sep’19, 2023 - Oct’18, 2023
         </li>
+    </ul>
+
+    <hr>
+
+    <h2 style="text-decoration: underline;">Skills</h2>
+
+    <ul>
+        <li>Power BI</li>
+        <li>Microsoft Office</li>
+        <li>Typing skill
+        <li>Leadership skills</li>
+        <li>Team Management</li>
+        <li>Interpersonal skills</li>
     </ul>
 
     <hr>
